--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<p class="timer"></p>
-	<p class="highscore">Highscore: {{highscore}}</p>
+	<p class='highscore'>Highscore: {{highscore}}</p>
 	<p class="numberOfPlays">Number of Games Played: {{times_played}}</p>
 
 	<table id="board">
